objects/BRANCH__c.object
<CustomObject>
    <label>BRANCH</label>
    <nameField>
        <label>BRANCH Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BRANCHS</pluralLabel>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>HOD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HOD</label>
        <referenceTo>FACULTY_LIST__c</referenceTo>
        <relationshipLabel>BRANCHS</relationshipLabel>
        <relationshipName>BRANCHS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NO_OF_STUDENTS__c</fullName>
        <label>NO OF STUDENTS</label>
        <summaryFilterItems>
            <field>Class_Student__c.AGE__c</field>
            <operation>greaterOrEqual</operation>
            <value>18</value>
        </summaryFilterItems>
        <summaryForeignKey>Class_Student__c.BRANCH__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Branch_Students_Fees_Pending__c</fullName>
        <label>Branch Students Fees Pending</label>
        <summarizedField>Class_Student__c.Total_fee_Pending__c</summarizedField>
        <summaryForeignKey>Class_Student__c.BRANCH__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Branch_Students_Fees_Collected__c</fullName>
        <label>Branch Students Fees Collected</label>
        <summarizedField>Class_Student__c.FeePaid__c</summarizedField>
        <summaryForeignKey>Class_Student__c.BRANCH__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>